--- a/gallery.css
+++ b/gallery.css
@@ -1,18 +1,17 @@
  /* Custom CSS */
 
 
-h1{
+
+ h1{
     text-align: center;
-    padding-top: 20px;
-}
+ }
  .gallery-item {
-    align-items: center;
     position: relative;
     overflow: hidden;
-    padding-top: 40px;
+    padding: 20px;
+    width:fit-content;
   }
   .gallery-item img {
-    box-shadow: #070606;
     width: 100%;
     height: auto;
     transition: transform 0.3s ease;
@@ -22,8 +21,8 @@ h1{
   }
   .gallery-caption {
     position: absolute;
-    bottom: 10px;
+    bottom: 5px;
     left: 10px;
-    color: #070606;
+    color: #0c0c0c;
     background: white;
   }
