--- a/gallery.css
+++ b/gallery.css
@@ -1,9 +1,31 @@
- /* Custom CSS */
+
+/* Style for the close button */
+.close-btn {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 1000; /* Ensure it's above other elements */
+}
+
+.close-btn a {
+  text-decoration: none;
+  color: #333;
+  background-color: #fff;
+  border-radius: 50%;
+  padding: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+
+.close-btn a:hover {
+  background-color: #ddd;
+}
 
 
 
  h1{
     text-align: center;
+    padding:40px;
+    
  }
  .gallery-item {
     position: relative;
@@ -26,3 +48,19 @@
     color: #0c0c0c;
     background: white;
   }
+
+  /* Style footer */
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 3px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+
+.mt-5{
+  margin-top: 80px;
+}
