--- a/news.css
+++ b/news.css
@@ -1,16 +1,31 @@
-/* --------News--------- */
+/* Style for the close button */
+.close-btn {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 1000; /* Ensure it's above other elements */
+}
 
+.close-btn a {
+    text-decoration: none;
+    color: #333;
+    background-color: #fff;
+    border-radius: 50%;
+    padding: 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
 
+.close-btn a:hover {
+    background-color: #ddd;
+}
 
 
 /* Style for news schedule */
-
 .schedule {
     flex: 1;
 }
 
 /* Style for calendar model */
-
 .calendar {
     border: 2px solid #ccc;
     border-radius: 8px;
@@ -18,4 +33,21 @@
     height:500px;
     width: 400px;
 }
- 
+
+/* Style footer */
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 3px;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+
+.mt-5{
+    margin-top: 80px;
+}
+
+
