--- a/team.css
+++ b/team.css
@@ -1,3 +1,26 @@
+/* Style for the close button */
+.close-btn {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 1000; /* Ensure it's above other elements */
+}
+
+.close-btn a {
+    text-decoration: none;
+    color: #333;
+    background-color: #fff;
+    border-radius: 50%;
+    padding: 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+
+.close-btn a:hover {
+    background-color: #ddd;
+}
+
+
+
 body {
     margin: 0;
     padding: 0;
@@ -29,4 +52,21 @@ body {
     .img img {
         width: 45%; /* Adjust for smaller screens */
     }
+}
+
+
+/* Style footer */
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 3px;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+
+.mt-5{
+    margin-top: 80px;
 }
