--- a/contact.css
+++ b/contact.css
@@ -4,27 +4,102 @@
     box-sizing: border-box;
 }
 
-/* Style for the close button */
-.close-btn {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    z-index: 1000; /* Ensure it's above other elements */
+
+
+.bg-green{
+    background-color: white;
+}
+.header .navbar-nav .nav-link {
+    color: blue; /* Change text color to white */
+   
 }
 
-.close-btn a {
+.header .navbar-brand{
+    color: blue;
+    flex: -1;
+   
+}
+.header .nav{
+    color: blue;
+}
+.header .navbar-nav .nav-link[href="index.html"] {
+    color: blue; /* Change text color to white */
+}
+
+.header .navbar-nav .nav-link[href="index.html"]:hover {
+    color: blue; /* Change text color on hover */
+}
+
+
+.header .navbar-toggler-icon {
+    background-color: blue; /* Change toggler icon color */
+}
+
+
+nav img {
+    width: 130px;
+}
+
+.nav-links {
+    flex: 1;
+    text-align: center;
+}
+
+.nav-links ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 2px 6px;
+    position: relative;
+}
+
+.nav-links ul li a {
+    color: black;
     text-decoration: none;
-    color: #333;
-    background-color: #fff;
-    border-radius: 50%;
-    padding: 5px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+    font-size: 13px;
+    margin-left: 20px;
 }
 
-.close-btn a:hover {
-    background-color: #ddd;
+.nav-links ul li::after {
+    content: '';
+    width: 0%;
+    height: 3px;
+    background-color: green;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+
 }
 
+.nav-links ul li:hover::after {
+    width: 100%;
+}
+
+.text-box {
+    width: 300%;
+    color: white;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+/* Dropdown container */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    height: 18px;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #8f2020;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
 
 .main{
     width: 100%;
@@ -181,15 +256,15 @@ body::before{
     border-radius: 50%;
     cursor: pointer;
 }
-.container .form-area .social-icons .facebook{
+.container .form-area .social-icons .fa-facebook{
     background-color: #3b5998;
     color: #fff;
 }
-.container .form-area .social-icons .instagram{
-    background: linear-gradient(167deg, #0085fc 0%, #f700da 30%, #f7ed00 90%);
+.container .form-area .social-icons .fa-square-instagram{
+    background-color: #f70084ec ;
     color: #fff;
 }
-.container .form-area .social-icons .linkedin{
+.container .form-area .social-icons .fa-twitter{
     background-color: #0e76a8;
     color: #fff;
 }
@@ -279,16 +354,17 @@ body::before{
 
 /* Style footer */
 footer {
+  
     background-color: #333;
     color: #fff;
-    padding: 3px;
     text-align: center;
     position: fixed;
     bottom: 0;
+    height: 40px;
     width: 100%;
-}
-
-
-.mt-5{
-    margin-top: 80px;
-}
+  }
+  
+  footer p{
+    padding-top: 10px;
+  
+  }
