--- a/contact.css
+++ b/contact.css
@@ -14,11 +14,24 @@
    
 }
 
+
 .header .navbar-brand{
     color: blue;
     flex: -1;
    
 }
+.navbar-nav .nav-link {
+    margin: 0 10px; /* Adjust the margin as needed */
+}
+
+.navbar-brand {
+    margin-right: 2px; /* Adjust the margin as needed */
+}
+
+.navbar-toggler {
+    margin-left: 10px; /* Adjust the margin as needed */
+}
+
 .header .nav{
     color: blue;
 }
@@ -128,12 +141,12 @@ body::before{
 }
 .container{
     width: 80%;
-    height: 80vh;
+    height: 40vh;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    box-shadow: 0px 2px 15px -4px #9e9e9e;
+   
     border-radius: 5px;
     animation: container 1.5s ease;
 }
