--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
 }
 
 .bg-green{
-    background-color: blue;
+    background-color: rgb(13, 13, 95);
 }
 
 .header .navbar{
@@ -214,7 +214,7 @@ nav img {
 
 .navbar {
     text-align: center;
-    background-color: blue !important;
+    background-color: rgba(14, 14, 151, 0.952) !important;
 
 }
 .max-h{
@@ -294,24 +294,3 @@ nav img {
 }
 
 
-
-
-
-
-
-/* Style footer */
-footer {
-  
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    height: 40px;
-    width: 100%;
-  }
-  
-  footer p{
-    padding-top: 10px;
-  
-  }
