--- a/css/team.css
+++ b/css/team.css
@@ -77,7 +77,7 @@ nav img {
 .navbar {
     position: absolute;
     top: 10%; /* Adjust the distance from the previous element */
-    width: 90%; /* Make the navbar full width */
+    width: 100%; /* Make the navbar full width */
   }
   
 
@@ -146,9 +146,9 @@ body::before{
     position: absolute;
     width: 300px;
     height: 300px;
-    background: linear-gradient(51deg,#258dca 0%, #dff0fa 80%);
+    /* background: linear-gradient(51deg,#258dca 0%, #dff0fa 80%);
     clip-path: circle(68.4% at 26% 31%);
-    animation: circle .8s;
+    animation: circle .8s; */
 }
 
 @media (max-width: 768px) {
