--- a/css/events.css
+++ b/css/events.css
@@ -170,4 +170,9 @@ img:hover{
     width: 100%;
     height: auto;
 }
+.card:hover {
+  transform: translateY(-5px);
+  transition: 0.3s ease;
+  box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15);
+}
 
