--- a/css/index.css
+++ b/css/index.css
@@ -320,4 +320,13 @@ nav img {
    flex: 1;
 }
 
+#vs h1 {
+    color: #b58900; /* mustard yellow tone */
+}
+
+#vs ul {
+    list-style-type: disc;
+    padding-left: 1.5rem;
+}
+
 
