--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,7 +1,7 @@
 /* Container and layout */
 .container {
   padding: 40px 20px;
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;;
   max-width: 1200px;
   margin: auto;
   margin-top: 5%;
