--- a/css/membership.css
+++ b/css/membership.css
@@ -1,7 +1,7 @@
 /* Apply to the entire body to center content */
 body {
   margin: 0;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;;
   background: linear-gradient(135deg, #f5f5f5, #e0f7fa);
   display: flex;
   justify-content: center;
