--- a/css/index.css
+++ b/css/index.css
@@ -26,53 +26,48 @@
     background-color: rgb(46, 143, 21);
 }
 
-.header .navbar{
-    padding: 7px;
-    row-gap: 6px;
-}
-
 .header .navbar-nav .nav-link {
-    color: rgb(8, 8, 8); /* Change text color to white */
+    color: rgb(0, 0, 0); /* Change text color to white */
 }
 
 .header .navbar-brand{
     color: rgb(0, 0, 0);
-    padding: 0;
+    flex: -1;
+   
+}
+.navbar-nav .nav-link {
+    margin: 0 10px; /* Adjust the margin as needed */
 }
 
-.header .navbar-brand img {
-    /* margin-top: -10px; Adjust the margin to align the logo vertically */
-    position: sticky;
-  }
+.navbar-brand {
+    margin-right: 2px; /* Adjust the margin as needed */
+}
 
+.navbar-toggler {
+    margin-left: 10px; /* Adjust the margin as needed */
+}
 
 .header .nav{
-    color: rgb(3, 3, 3);
+    color: rgb(0, 0, 0);
 }
-
 .header .navbar-nav .nav-link[href="index.html"] {
-    color: rgb(12, 12, 12); /* Change text color to white */
+    color: rgb(0, 0, 0); /* Change text color to white */
 }
 
 .header .navbar-nav .nav-link[href="index.html"]:hover {
-    color: #000000; /* Change text color on hover */
+    color: rgb(0, 0, 0); /* Change text color on hover */
 }
 
 
 .header .navbar-toggler-icon {
-    background-color: white; /* Change toggler icon color */
+    background-color: rgb(0, 0, 0); /* Change toggler icon color */
 }
 
+
 nav img {
-    width: 80px;
+    width: 130px;
 }
-.navbar-logo {
-    margin-top: 5%;
-    height: 120px; /* or whatever fits your navbar */
-    width: 120px; /* make sure it's equal to height */
-   
-   
-}
+
 
 .nav-links {
     flex: 1;
