--- a/css/team.css
+++ b/css/team.css
@@ -1,15 +1,12 @@
 .team-section {
     padding: 60px 20px;
     background: none; /* Removes the grey background */
-    margin-top: 4%;
+    margin-top: 8%;
 }
 
 .heading {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: #1d3557;
-    text-transform: uppercase;
     letter-spacing: 1px;
+    font-family: Arial, Helvetica, sans-serif;;
 }
 
 .team-img {
